--- a/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
+++ b/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardview_id"
+    android:layout_width="120dp"
+    android:layout_height="120dp"
+    android:layout_margin="5dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
-    android:layout_width="120dp"
-    android:layout_height="190dp"
-    xmlns:cardview="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="5dp"
-    cardview:cardCornerRadius="4dp">
+    cardview:cardCornerRadius="12dp">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#2d2d2d"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/pokemon_img"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:scaleType="centerCrop"
-            android:background="#2d2d2d"/>
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:background="#2d2d2d" />
 
         <TextView
             android:id="@+id/pokemon_name"
@@ -27,7 +28,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="Mew"
-            android:textColor="#2d2d2d"
+            android:textColor="#ECEAE0"
             android:textSize="13sp" />
 
     </LinearLayout>
