--- a/PokemonShowdown/app/src/main/res/layout/activity_movements_picker.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_movements_picker.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F5E7"
-    tools:context=".MainActivity">
+    tools:context=".MovementsPicker">
 
     <ImageView
         android:id="@+id/pantalla_jugador"
@@ -27,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:clickable="true"
-        android:contentDescription="@string/fabPokemon"
+        android:contentDescription="juju"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayoutP"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,14 +33,25 @@
         app:srcCompat="@drawable/pokeball"
         tools:ignore="ImageContrastCheck" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <LinearLayout
         android:id="@+id/linearLayoutP"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
+        android:layout_height="0dp"
+        android:orientation="vertical"
         android:padding="8dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        tools:layout_editor_absoluteX="8dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_id"
