--- a/PokemonShowdown/app/src/main/res/layout/list_element.xml
+++ b/PokemonShowdown/app/src/main/res/layout/list_element.xml
@@ -10,6 +10,7 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="4dp"
     android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     app:cardUseCompatPadding="true"
     android:focusable="true">
 
