--- a/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
+++ b/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
@@ -10,6 +10,7 @@
     cardview:cardCornerRadius="12dp">
 
     <LinearLayout
+        android:id="@+id/llP"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#2d2d2d"
