--- a/PokemonShowdown/app/src/main/res/values/colors.xml
+++ b/PokemonShowdown/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="whitep">#EFEFED</color>
+    <color name="redp">#FED2E49</color>
+    <color name="blackp">#28292A</color>
+    <color name="blue_selected">#FF7FBCFA</color>
+
+
 </resources>
