--- a/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
+++ b/PokemonShowdown/app/src/main/res/layout/cardview_item_pokemon.xml
@@ -7,21 +7,21 @@
     android:layout_margin="5dp"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
+    cardview:cardBackgroundColor="@color/whitep"
     cardview:cardCornerRadius="12dp">
 
     <LinearLayout
         android:id="@+id/llP"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#2d2d2d"
+        android:background="@color/blackp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/pokemon_img"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:layout_gravity="center"
-             />
+            android:layout_gravity="center" />
 
         <TextView
             android:id="@+id/pokemon_name"
