--- a/PokemonShowdown/app/src/main/res/layout/activity_movements_picker.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_movements_picker.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:clickable="true"
+        app:tint="@null"
         android:contentDescription="juju"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayoutP"
@@ -50,8 +51,9 @@
         android:orientation="vertical"
         android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        tools:layout_editor_absoluteX="8dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_id"
