--- a/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_combat.xml
@@ -85,7 +85,7 @@
         android:layout_height="57dp"
         android:layout_marginBottom="15dp"
         android:text="Luchar"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/changepk"
         app:layout_constraintEnd_toEndOf="@+id/changepk" />
 
@@ -96,7 +96,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="40dp"
         android:text="Pokemon"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/background"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -124,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="87dp"
         android:background="@color/blackp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -147,7 +147,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintPkBData"
         android:layout_width="259dp"
-        android:layout_height="87dp"
+        android:layout_height="77dp"
+        android:layout_marginBottom="10dp"
         android:background="@android:drawable/screen_background_light_transparent"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -160,10 +161,10 @@
             android:layout_marginEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.855"
+            app:layout_constraintHorizontal_bias="0.792"
             app:layout_constraintStart_toEndOf="@+id/pkbhealth"
             app:layout_constraintTop_toBottomOf="@+id/pkb_hpBar"
-            app:layout_constraintVertical_bias="0.833"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@android:drawable/ic_input_delete" />
 
         <TextView
@@ -204,7 +205,7 @@
         <LinearLayout
             android:id="@+id/pkbhealth"
             android:layout_width="90dp"
-            android:layout_height="30dp"
+            android:layout_height="20dp"
             android:layout_marginStart="24dp"
             android:orientation="horizontal"
             app:layout_constraintStart_toStartOf="parent"
@@ -243,6 +244,7 @@
         android:id="@+id/constraintPkData"
         android:layout_width="259dp"
         android:layout_height="60dp"
+        android:layout_marginTop="10dp"
         android:background="@android:drawable/screen_background_light_transparent"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -276,7 +278,7 @@
             android:id="@+id/pkstatus"
             android:layout_width="34dp"
             android:layout_height="20dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pk_name"
             app:srcCompat="@android:drawable/ic_input_delete" />
@@ -286,10 +288,9 @@
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="200dp"
             android:layout_height="20dp"
-            android:layout_marginStart="1dp"
+            android:layout_marginStart="6dp"
             android:progress="100"
             android:progressTint="#4EEC63"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/pkstatus"
             app:layout_constraintTop_toBottomOf="@+id/pk_name" />
 
