--- a/PokemonShowdown/app/src/main/res/drawable/ic_corner.xml
+++ b/PokemonShowdown/app/src/main/res/drawable/ic_corner.xml
@@ -1,5 +1,5 @@
 <vector android:autoMirrored="true" android:height="105dp"
     android:viewportHeight="105" android:viewportWidth="81"
     android:width="81dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#fff" android:pathData="M0,0H81V105Z"/>
+    <path android:fillColor="#ff0000" android:pathData="M0,0H81V105Z"/>
 </vector>
