--- a/PokemonShowdown/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/PokemonShowdown/app/src/main/res/layout/layout_custom_dialog.xml
@@ -9,26 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white">
-        <View
-            android:layout_width="40dp"
-            android:layout_height="60dp"
-            android:background="@drawable/ic_corner"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true" />
-        <ImageView
-            android:id="@+id/btn_close"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="2dp"
-            android:src="@drawable/quit"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="2dp"
-            android:layout_alignParentRight="true" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="560dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <ImageView
