--- a/PokemonShowdown/app/src/main/res/layout/activity_main.xml
+++ b/PokemonShowdown/app/src/main/res/layout/activity_main.xml
@@ -105,17 +105,6 @@
         app:srcCompat="@drawable/pokeball"
         tools:ignore="ImageContrastCheck" />
 
-    <ImageView
-        android:id="@+id/pantalla_jugador"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/pantallaJ"
-        android:scaleType="fitXY"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/t1p"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="108dp" />
-
     <LinearLayout
         android:id="@+id/linearLayoutP"
         android:layout_width="match_parent"
@@ -132,6 +121,17 @@
             android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/pantalla_jugador"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/pantallaJ"
+        android:scaleType="fitXY"
+        android:visibility="visible"
+        app:srcCompat="@drawable/t1p"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="108dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
