--- a/PokemonShowdown/app/src/main/res/values/colors.xml
+++ b/PokemonShowdown/app/src/main/res/values/colors.xml
@@ -13,16 +13,16 @@
     <color name="greyp">#ED28292A</color>
     <color name="blue_selected">#9777B9FB</color>
     <color name="white_shadow">#32CFCFCB</color>
-    <color name="bluep">#44ccf0</color>
-    <color name="bug">#1a4c27</color>
-    <color name="dark">#030708</color>
-    <color name="dragon">#458894</color>
-    <color name="electric">#e2e22f</color>
-    <color name="fairy">#971848</color>
-    <color name="fight">#9c4020</color>
-    <color name="fire">#ab1e20</color>
+    <color name="bluep">#83C301</color>
+    <color name="bug">#b1d95e</color>
+    <color name="dark">#5B5466</color>
+    <color name="dragon">#016FC9</color>
+    <color name="electric">#FBD100</color>
+    <color name="fairy">#FB89EB</color>
+    <color name="fighting">#E0306A</color>
+    <color name="fire">#FF9741</color>
     <color name="flying">#4a677d</color>
-    <color name="ghost">#32336b</color>
+    <color name="ghost">#4D6BB3</color>
     <color name="grass">#117838</color>
     <color name="ground">#a6712a</color>
     <color name="ice">#84d4eb</color>
