--- a/PokemonShowdown/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/PokemonShowdown/app/src/main/res/layout/layout_custom_dialog.xml
@@ -58,7 +58,7 @@
                     android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/grass" />
+                    app:srcCompat="@drawable/bug" />
 
                 <ImageView
                     android:id="@+id/type2"
@@ -66,7 +66,7 @@
                     android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/grass" />
+                    app:srcCompat="@drawable/bug" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
