--- a/PokemonShowdown/app/src/main/res/values/colors.xml
+++ b/PokemonShowdown/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="greyp">#ED28292A</color>
     <color name="blue_selected">#9777B9FB</color>
     <color name="white_shadow">#32CFCFCB</color>
-    <color name="bluep">#83C301</color>
+    <color name="bluep">#44CCF0</color>
     <color name="bug">#83C301</color>
     <color name="dark">#5B5466</color>
     <color name="dragon">#016FC9</color>
